objects/SGRRenewalBatch__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Type__c</fullName>
        <label>Action Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Renewals</fullName>
                    <default>true</default>
                    <label>Renewals</label>
                </value>
                <value>
                    <fullName>BlueSTAR Transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BatchID__c</fullName>
        <label>BatchID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BatchType__c</fullName>
        <label>Batch Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Batch</fullName>
                </value>
                <value>
                    <fullName>On-Demand</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_to_Account__c</fullName>
        <label>Date to Account</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_to_GA__c</fullName>
        <label>Date to GA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_to_Producer__c</fullName>
        <label>Date to Producer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>TX</fullName>
                </value>
                <value>
                    <fullName>NM</fullName>
                </value>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FundingType__c</fullName>
        <label>Funding Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACAP</fullName>
                </value>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>COST</fullName>
                </value>
                <value>
                    <fullName>MPP</fullName>
                </value>
                <value>
                    <fullName>PREM</fullName>
                </value>
                <value>
                    <fullName>PAR</fullName>
                </value>
                <value>
                    <fullName>SERV</fullName>
                </value>
                <value>
                    <fullName>NDSS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MarketSegment__c</fullName>
        <label>Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AFG</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>ALI</fullName>
                </value>
                <value>
                    <fullName>APS</fullName>
                </value>
                <value>
                    <fullName>COMA</fullName>
                </value>
                <value>
                    <fullName>CPAA</fullName>
                </value>
                <value>
                    <fullName>EAML</fullName>
                </value>
                <value>
                    <fullName>FEP</fullName>
                </value>
                <value>
                    <fullName>HA</fullName>
                </value>
                <value>
                    <fullName>HCS2</fullName>
                </value>
                <value>
                    <fullName>HMSG</fullName>
                </value>
                <value>
                    <fullName>HSC1</fullName>
                </value>
                <value>
                    <fullName>HWB</fullName>
                </value>
                <value>
                    <fullName>IMTL</fullName>
                </value>
                <value>
                    <fullName>IMTS</fullName>
                </value>
                <value>
                    <fullName>JG</fullName>
                </value>
                <value>
                    <fullName>LAN</fullName>
                </value>
                <value>
                    <fullName>LG</fullName>
                </value>
                <value>
                    <fullName>LGC</fullName>
                </value>
                <value>
                    <fullName>LGL</fullName>
                </value>
                <value>
                    <fullName>LGN</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MAC</fullName>
                </value>
                <value>
                    <fullName>MARL</fullName>
                </value>
                <value>
                    <fullName>MBIL</fullName>
                </value>
                <value>
                    <fullName>MCCL</fullName>
                </value>
                <value>
                    <fullName>MCUL</fullName>
                </value>
                <value>
                    <fullName>MGC</fullName>
                </value>
                <value>
                    <fullName>MGL</fullName>
                </value>
                <value>
                    <fullName>MINAL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Accounts__c</fullName>
        <label>Number of Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RenewalType__c</fullName>
        <label>Renewal Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Analytical</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_Effective_date__c</fullName>
        <label>Renewal Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scheduled_Date__c</fullName>
        <description>BlueSTAR Opportunity Batch scheduled date and time.</description>
        <label>Scheduled Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Change Offering</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Discovery</fullName>
                </value>
                <value>
                    <fullName>Finalist Named</fullName>
                </value>
                <value>
                    <fullName>Final Presentation</fullName>
                </value>
                <value>
                    <fullName>Headed to RFP</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>In Underwriting</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Negotiate</fullName>
                </value>
                <value>
                    <fullName>Network Request</fullName>
                </value>
                <value>
                    <fullName>Not Headed to RFP</fullName>
                </value>
                <value>
                    <fullName>Off-Cycle Product</fullName>
                </value>
                <value>
                    <fullName>Onboarding Complete</fullName>
                </value>
                <value>
                    <fullName>Qualified</fullName>
                </value>
                <value>
                    <fullName>Review with Client/Broker</fullName>
                </value>
                <value>
                    <fullName>RFP Receipt</fullName>
                </value>
                <value>
                    <fullName>RFP Received</fullName>
                </value>
                <value>
                    <fullName>Standard Renewal</fullName>
                </value>
                <value>
                    <fullName>Strategic Renewal</fullName>
                </value>
                <value>
                    <fullName>Won</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Renewal Batch</label>
    <listViews>
        <fullName>Batches</fullName>
        <columns>NAME</columns>
        <columns>BatchID__c</columns>
        <columns>Number_of_Accounts__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Date_to_GA__c</columns>
        <columns>Date_to_Producer__c</columns>
        <columns>Date_to_Account__c</columns>
        <columns>MarketSegment__c</columns>
        <columns>Division__c</columns>
        <columns>FundingType__c</columns>
        <columns>Renewal_Effective_date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>Batches</label>
    </listViews>
    <nameField>
        <label>SGRRenewalBatch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Renewal Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Account_date_and_Renewal_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND((ISPICKVAL( BatchType__c , &apos;Batch&apos;) &amp;&amp; OR(ISPICKVAL( Division__c , &apos;IL&apos;) , ISPICKVAL( Division__c , &apos;TX&apos;),ISPICKVAL( Division__c , &apos;MT&apos;)) &amp;&amp; IF( Date_to_Account__c  &lt; ( DATE(year( Renewal_Effective_date__c ),month( Renewal_Effective_date__c ),1)-60), false, true)), ISCHANGED(Date_to_Account__c))</errorConditionFormula>
        <errorMessage>Date to Account must be at least 60 days before the Renewal Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Account_date_and_division_values</fullName>
        <active>true</active>
        <errorConditionFormula>AND((ISPICKVAL( BatchType__c , &apos;Batch&apos;) &amp;&amp; OR(ISPICKVAL( Division__c , &apos;NM&apos;) , ISPICKVAL( Division__c , &apos;OK&apos;)) &amp;&amp; IF(Date_to_Account__c  &gt; ( DATE(year( Renewal_Effective_date__c ),month( Renewal_Effective_date__c ),1)+60), false, true) &amp;&amp; IF( Date_to_Account__c  &lt; ( DATE(year( Renewal_Effective_date__c ),month( Renewal_Effective_date__c ),1)-85), false, true)), ISCHANGED(Date_to_Account__c))</errorConditionFormula>
        <errorMessage>Date to Account must be at least 85 days before the Renewal Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_to_Account_and_GA_and_Producer_date</fullName>
        <active>true</active>
        <description>when user enters Date to Account which is either less than Date to GA or Date to producer, this rule is activated</description>
        <errorConditionFormula>AND( ISCHANGED(Date_to_Account__c ), Date_to_Account__c  &lt;=  Date_to_GA__c  ||  Date_to_Account__c  &lt;=  Date_to_Producer__c)</errorConditionFormula>
        <errorMessage>Date to Account must come after the Date to GA and the Date to Producer</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_to_GA_and_Producer_and_Account_date</fullName>
        <active>true</active>
        <description>When user enters Date to GA which is greater than either Date to Producer or Date to Account, then this rule is activated.</description>
        <errorConditionFormula>AND(ISCHANGED(Date_to_GA__c), Date_to_GA__c  &gt;=  Date_to_Producer__c  ||  Date_to_GA__c  &gt;=  Date_to_Account__c)</errorConditionFormula>
        <errorMessage>Date to GA must be less than the Date to Producer and Date to Account</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_to_producer_and_GA_and_account_date</fullName>
        <active>true</active>
        <description>when the user enters Date to producer less than Date to GA or greater than Date to Account, then this rule is invoked</description>
        <errorConditionFormula>AND(ISCHANGED(Date_to_Producer__c ), Date_to_Producer__c  &lt;=  Date_to_GA__c  ||  Date_to_Producer__c  &gt;=  Date_to_Account__c)</errorConditionFormula>
        <errorMessage>Date to Producer must be in between the Date to GA and Date to Account</errorMessage>
    </validationRules>
</CustomObject>